@@ -1,5 +1,5 @@
 name = 0 Point
-description = 0 Point theme is ideal for a wide range of sites. It has been optimized for e-commerce with <a href="http://www.ubercart.org">Ubercart</a>. <br /> <em>By <a href="http://www.radut.net">Dr. Radut</a>.<em>
+description = 0 Point theme is ideal for a wide range of sites. <br /> <em>Developed by <a href="http://www.radut.net">Dr. Radut</a>.</em>
 
 core = 7.x
 
